--- a/image-tracking.html
+++ b/image-tracking.html
@@ -60,7 +60,7 @@
           embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
   
           <a-assets>
-              <video src="mov_bbb.mp4"
+              <video src="./assets/mov_bbb.mp4"
                   preload="auto" id="vid" response-type="arraybuffer" loop
                   crossorigin webkit-playsinline autoplay muted playsinline>
               </video>
@@ -68,7 +68,7 @@
   
           <a-nft
               videohandler
-              type='nft' url='./pinball'
+              type='nft' url='./assets/pinball'
               smooth="true" smoothCount="10" smoothTolerance="0.01" smoothThreshold="5"
           >
               <a-video
