trying to change route again

--- a/image-tracking.html
+++ b/image-tracking.html
@@ -60,7 +60,7 @@
           embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
   
           <a-assets>
-              <video src="https://rawcdn.githack.com/saxani/phone-trigger-tutorial/36828f5e91c12a0d51ce8656a80d33a09c70b00d/assets/mov_bbb.mp4"
+              <video src="./assets/mov_bbb.mp4"
                   preload="auto" id="vid" response-type="arraybuffer" loop
                   crossorigin webkit-playsinline autoplay muted playsinline>
               </video>
