--- a/image-tracking.html
+++ b/image-tracking.html
@@ -60,7 +60,7 @@
           embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
   
           <a-assets>
-              <video src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.webm"
+              <video src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4"
                   preload="auto" id="vid" response-type="arraybuffer" loop
                   crossorigin webkit-playsinline autoplay muted playsinline>
               </video>
