updating video settings

--- a/image-tracking.html
+++ b/image-tracking.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="apple-mobile-web-app-capable" content="yes"> 
     <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
 
     <script src='https://raw.githack.com/AR-js-org/AR.js/ES6/aframe/build/aframe-ar-nft.js'></script>
@@ -60,8 +61,8 @@
           embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
   
           <a-assets>
-              <video src="https://interactive-examples.mdn.mozilla.net/media/cc0-videos/flower.mp4"
-                  preload="auto" id="vid" response-type="arraybuffer" loop
+              <video src="./assets/mob_bbb.mp4"
+                  preload="auto" id="vid" loop
                   crossorigin webkit-playsinline autoplay muted playsinline>
               </video>
           </a-assets>
