video name mess up

--- a/image-tracking.html
+++ b/image-tracking.html
@@ -61,7 +61,7 @@
           embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
   
           <a-assets>
-              <video src="./assets/mob_bbb.mp4"
+              <video src="./assets/mov_bbb.mp4"
                   preload="auto" id="vid" loop
                   crossorigin webkit-playsinline autoplay muted playsinline>
               </video>
