trying to update controls on video

--- a/image-tracking.html
+++ b/image-tracking.html
@@ -63,7 +63,7 @@
           <a-assets>
               <video src="./assets/mov_bbb.mp4"
                   preload="auto" id="vid" loop
-                  crossorigin webkit-playsinline autoplay muted playsinline>
+                  crossorigin webkit-playsinline autoplay muted playsinline controls>
               </video>
           </a-assets>
   
