--- a/marker.html
+++ b/marker.html
@@ -6,11 +6,15 @@
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
       <a-marker preset="hiro">
-        <a-entity
+        <a-entity geometry="primitive: sphere; radius: 1.5"
+          light="type: point; color: white; intensity: 2"
+          material="color: white; shader: flat; src: glow.jpg"
+          position="0 0 -5"></a-entity>
+        <!-- <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-        ></a-entity>
+        ></a-entity> -->
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
