--- a/marker.html
+++ b/marker.html
@@ -8,7 +8,7 @@
       <a-marker preset="hiro">
         <a-entity geometry="primitive: sphere; radius: 1.5"
           light="type: point; color: white; intensity: 2"
-          material="color: white; shader: flat; src: glow.jpg"
+          material="color: red;"
           position="0 0 -5"></a-entity>
         <!-- <a-entity
           position="0 0 0"
