--- a/marker.html
+++ b/marker.html
@@ -9,7 +9,9 @@
         <a-entity geometry="primitive: sphere; radius: 1.5"
           light="type: point; color: white; intensity: 2"
           material="color: red;"
-          position="0 0 -5"></a-entity>
+          position="0 0 0"
+          scale="0.05 0.05 0.05"
+          ></a-entity>
         <!-- <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
