--- a/marker.html
+++ b/marker.html
@@ -8,9 +8,9 @@
       <a-marker preset="hiro">
         <a-entity geometry="primitive: sphere; radius: 1.5"
           light="type: point; color: white; intensity: 2"
-          material="color: red;"
+          material="color: white;"
           position="0 0 0"
-          scale="0.05 0.05 0.05"
+          scale="1 1 1"
           ></a-entity>
         <!-- <a-entity
           position="0 0 0"
