--- a/marker.html
+++ b/marker.html
@@ -7,10 +7,10 @@
     <a-scene embedded arjs>
       <a-marker preset="hiro">
         <a-entity geometry="primitive: sphere; radius: 1.5"
-          light="type: point; color: white; intensity: 2"
+          light="type: ambient; color: white;"
           material="color: white;"
           position="0 0 0"
-          scale="1 1 1"
+          scale="0.25 0.25 0.25"
           ></a-entity>
         <!-- <a-entity
           position="0 0 0"
