--- a/marker.html
+++ b/marker.html
@@ -5,13 +5,18 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
+      <a-assets>
+        <img id="puppy" src="./assets/puppy.jpg">
+      </a-assets>
+
       <a-marker preset="hiro">
-        <a-entity geometry="primitive: sphere; radius: 1.5"
-          light="type: ambient; color: white;"
-          material="color: white;"
-          position="0 0 0"
-          scale="0.25 0.25 0.25"
-          ></a-entity>
+        <a-image src="#puppy"
+          position='50 150 -100'
+          rotation='90 0 180'
+          width='300'
+          height='175'
+        >
+        </a-image>
         <!-- <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
