--- a/marker.html
+++ b/marker.html
@@ -10,18 +10,11 @@
       </a-assets>
 
       <a-marker preset="hiro">
-        <a-image src="#puppy"
-          position='50 150 -100'
-          rotation='90 0 180'
-          width='300'
-          height='175'
-        >
-        </a-image>
-        <!-- <a-entity
+        <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-        ></a-entity> -->
+        ></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
