--- a/marker.html
+++ b/marker.html
@@ -10,11 +10,19 @@
       </a-assets>
 
       <a-marker preset="hiro">
-        <a-entity
+
+        <a-entity geometry="primitive: sphere; radius: 1.5"
+          light="type: ambient; color: white;"
+          material="color: white;"
+          position="0 0 0"
+          scale="0.25 0.25 0.25"
+          >
+        </a-entity>
+        <!-- <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-        ></a-entity>
+        ></a-entity> -->
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
